--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".home.DashBoardActivity"
+            android:label="@string/title_activity_dash_board"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".ProductPage" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".HomeActivityPage"></activity>
-        <activity android:name=".CowMilkActivity"></activity>
-
+        <activity android:name=".HomeActivityPage" />
+        <activity android:name=".CowMilkActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +24,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-</application>
+    </application>
 
-    </manifest>
+</manifest>
