--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.delhidairy">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,7 +16,6 @@
             android:label="@string/title_activity_dash_board"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".ProductPage" />
-        <activity android:name=".MainActivity" />
         <activity android:name=".HomeActivityPage" />
         <activity android:name=".CowMilkActivity" />
         <activity android:name=".SplashActivity">
