--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
